@@ -69,6 +69,9 @@ Using integer instructions, it seems 2 cycles/limb is the limit.  It might be
 possible to use 128-bit SSE2 instructions for better performance, but since
 Hammer in practice only execute 1 SSE instruction/cycle, that seem unlikely.
 
+The mpn_lshift code should have a special case for count=1, since that could be
+done at 1 cycle/limb.
+
 
 mpn_copyi, mpn_copyd:
 
